--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-# system
 PORT=8080
 TZ=Asia/Jakarta
 
-# Swagger
+
+#-> Swagger
 APP_NAME=Express Modular API
 APP_VERSION=1.0.0
 APP_DESCRIPTION=you can use this boilerplate for monolithic or microservice and revamp from monolithic to microservice is very easy
@@ -10,12 +10,14 @@ APP_SCHEMES=http|https
 CONTACT_NAME=Jefri Herdi Triyanto
 CONTACT_EMAIL=jefriherditriyanto@gmail.com
 
-# Security
+
+#-> Security
 SECRET_KEY=
 JWT_SECRET_TOKEN=
 JWT_EXPIRED_TOKEN=7d #day
 
-# Database
+
+#-> Database
 DB_TYPE=
 DB_HOST=
 DB_PORT=
@@ -23,3 +25,9 @@ DB_USER=
 DB_PASS=
 DB_NAME=
 
+
+#-> Reporter
+REPORT_ERROR_URL=
+REPORT_BUSINESS_URL=
+REPORT_BEARER_TOKEN=
+REPORT_GROUP_ID=
