--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,22 @@
 PORT=8080
 TZ=Asia/Jakarta
+SECRET_KEY=
 
 
 #-> Swagger
 APP_NAME=Express Modular API
 APP_VERSION=1.0.0
 APP_DESCRIPTION=you can use this boilerplate for monolithic or microservice and revamp from monolithic to microservice is very easy
-APP_SCHEMES=http|https
+APP_SCHEMES=https
 CONTACT_NAME=Jefri Herdi Triyanto
 CONTACT_EMAIL=jefriherditriyanto@gmail.com
 
 
-#-> Security
-SECRET_KEY=
+#-> Configure
+OTP_EXPIRED_MINUTE=3
+
+
+#-> JWT
 JWT_SECRET_TOKEN=
 JWT_EXPIRED_TOKEN=7d #day
 
