--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "license": "MIT",
   "type": "commonjs",
   "scripts": {
+    "reset": "npx cross-env rm -rf ./node_modules && yarn",
     "dev": "npx nodemon",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "prettier": "prettier --config .prettierrc \"./src/**/*.ts\" --write",
     "table:status": "npx knex migrate:status",
     "table:clear": "npx knex migrate:rollback",
     "table:build": "npx knex migrate:latest",
     "table:up": "npx knex migrate:up",
     "table:down": "npx knex migrate:down",
     "swagger": "node ./swagger.js",
-    "reset": "npx cross-env rm -rf ./node_modules && yarn",
-    "start": "node ./src"
+    "build": "rimraf ./build && npx tsc",
+    "start:only": "node build/index.js",
+    "start": "npm run build && npm run start:only",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -23,6 +29,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "helmet": "^7.0.0",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
@@ -32,8 +39,26 @@
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/knex": "^0.16.1",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.3.3",
+    "@types/node-cron": "^3.0.8",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "cross-env": "^7.0.3",
+    "eslint": "^8.44.0",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.6",
     "yarn": "^1.22.19"
   }
 }
