--- a/.eslintrc
+++ b/.eslintrc
@@ -8,10 +8,11 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "no-console": 1, // Remember, this means error!
-    "@typescript-eslint/no-namespace": 0,
-    "@typescript-eslint/no-explicit-any": 0,
-    "@typescript-eslint/ban-ts-comment": 0,
-    "no-useless-escape": 0
+    "no-console": "warn",
+    "@typescript-eslint/no-namespace": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "no-useless-escape": "off",
+    "prefer-const": "warn"
   }
 }
