--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
   "semi": true,
-  "trailingComma": "none",
+  "tabWidth": 2,
+  "printWidth": 80,
+  "trailingComma": "es5",
   "singleQuote": true,
-  "printWidth": 80
+  "bracketSpacing": true
 }
