--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "reset": "npx cross-env rm -rf ./node_modules && yarn",
     "dev": "npx nodemon",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
+    "lint": "eslint ./src --ext .ts",
+    "lint:fix": "eslint ./src --ext .ts --fix",
     "prettier": "prettier --config .prettierrc \"./src/**/*.ts\" --write",
     "table:status": "npx knex migrate:status",
     "table:clear": "npx knex migrate:rollback",
@@ -17,8 +17,7 @@
     "table:down": "npx knex migrate:down",
     "swagger": "npx ts-node ./swagger.ts",
     "build": "rimraf ./build && npx tsc",
-    "start:only": "node build/index.js",
-    "start": "npm run build && npm run start:only",
+    "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -53,7 +52,9 @@
     "@typescript-eslint/parser": "^5.60.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.44.0",
-    "nodemon": "^2.0.22",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
