--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "project-sepatu",
+  "name": "express-modular-api",
   "version": "1.0.0",
   "main": "./src/index.js",
   "license": "MIT",
   "type": "commonjs",
   "scripts": {
     "reset": "npx cross-env rm -rf ./node_modules && yarn",
-    "dev": "npx nodemon",
-    "lint": "eslint ./src --ext .ts",
-    "lint:fix": "eslint ./src --ext .ts --fix",
-    "prettier": "prettier --config .prettierrc \"./src/**/*.ts\" --write",
     "table:status": "npx knex migrate:status",
     "table:clear": "npx knex migrate:rollback",
     "table:build": "npx knex migrate:latest",
     "table:up": "npx knex migrate:up",
     "table:down": "npx knex migrate:down",
     "swagger": "npx ts-node ./swagger.ts",
-    "build": "rimraf ./build && npx tsc",
-    "start": "node build/index.js",
+    "dev": "npx nodemon",
+    "lint": "npx eslint ./src --ext .ts",
+    "lint:fix": "npx eslint ./src --ext .ts --fix",
+    "prettier": "npx prettier --config .prettierrc \"./src/**/*.ts\" --write",
+    "build": "npx rimraf ./build && npx tsc",
+    "start": "node ./build",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "_moduleAliases": {
+    "@/configs": "build/configs",
+    "@/environments": "build/environments",
+    "@/paths": "build/paths",
+    "@/apps": "build/apps",
+    "@/contracts": "build/contracts",
+    "@/helpers": "build/helpers",
+    "@/middlewares": "build/middlewares",
+    "@/models/repositories": "build/models/repositories",
+    "@/utils": "build/utils"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -54,6 +65,7 @@
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "module-alias": "^2.2.3",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
