--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -4,9 +4,9 @@ name: 🚀 Deploy App...
 on: # master = production
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: ["development"] # master, development, staging
+    branches: ['development'] # master, development, staging
   pull_request:
-    branches: ["development"] # master, development, staging
+    branches: ['development'] # master, development, staging
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -16,7 +16,7 @@ env:
 
 jobs:
   app-deploy:
-    name: 🚚 BackEnd (Dev)
+    name: 🚚 BackEnd (Dev) - Express Modular API
     runs-on: server-dell-jefri
     steps:
       - name: Set Time Zone, Get start datetime & Template Top
