--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "license": "MIT",
   "type": "commonjs",
   "scripts": {
-    "reset": "npx cross-env rm -rf ./node_modules && yarn",
+    "reset": "npx rimraf ./node_modules && yarn",
     "table:status": "npx knex migrate:status",
     "table:clear": "npx knex migrate:rollback",
     "table:build": "npx knex migrate:latest",
     "table:up": "npx knex migrate:up",
     "table:down": "npx knex migrate:down",
-    "swagger": "npx ts-node ./swagger.ts",
+    "swagger": "npx ts-node -r module-alias/register ./src/swagger.ts",
     "dev": "npx nodemon",
     "lint": "npx eslint ./src --ext .ts",
     "lint:fix": "npx eslint ./src --ext .ts --fix",
