--- a/.github/workflows/test-docker.yaml
+++ b/.github/workflows/test-docker.yaml
@@ -22,6 +22,8 @@ jobs:
         run: |
           docker build -t my-docker-image .
 
+      - name: ✅ Ready to Use!
+        run: echo "success build docker!"
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
